# SignalHandler

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitattributes  CMakeLists.txt  CMakeLists_files.cmake  LICENSE  README.md  README_8md.html  SignalHandler_8cpp.html  SignalHandler_8cpp_source.html  SignalHandler_8h.html  SignalHandler_8h_source.html  annotated.html  annotated_dup.js  classes.html  classsh_1_1SignalException-members.html  classsh_1_1SignalException.html  classsh_1_1SignalException.js  classsh_1_1SignalHandler-members.html  classsh_1_1SignalHandler.html  classsh_1_1SignalHandler.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_dd7205bf943e71cfd823c34f29496379.html  dir_dd7205bf943e71cfd823c34f29496379.js  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  hierarchy.js  index.html  namespaces.html  namespaces_dup.js  namespacesh.html  namespacesh.js  (+3 more)
.github/workflows/: coverage.yml  documentation.yaml  macos.yml  ubuntu.yml  windows.yml
cmake/: CPM.cmake  Guard.cmake  Project-config.cmake.in  Project-install.cmake  Project-pkg-config.in  Project-postfix.cmake  Warnings.cmake
doc/: CMakeLists.txt  custom.css  header.html.in
include/sh/: SignalHandler.h
search/: all_0.js  all_2.js  all_4.js  classes_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
src/: SignalHandler.cpp
test/: CMakeLists.txt  SignalHandler.cpp
tools/scripts/: format-cmake.bash  update-CPM.bash
